--- a/HomeworkRecursion/build-HomeworkRecursion-Desktop-Debug/Makefile
+++ b/HomeworkRecursion/build-HomeworkRecursion-Desktop-Debug/Makefile
@@ -29,7 +29,8 @@ SUBTARGETS    =  \
 		sub-RepetitionComb \
 		sub-TowerOfHanoi \
 		sub-NoRepetitionComb \
-		sub-MatrixPaths
+		sub-MatrixPaths \
+		sub-MatrixAreas
 
 
 sub-ArrayReverse-qmake_all:  FORCE
@@ -182,6 +183,31 @@ sub-MatrixPaths-install_subtargets: FORCE
 sub-MatrixPaths-uninstall_subtargets: FORCE
 	@test -d MatrixPaths/ || mkdir -p MatrixPaths/
 	cd MatrixPaths/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixPaths/MatrixPaths.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile uninstall
+sub-MatrixAreas-qmake_all:  FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile
+	cd MatrixAreas/ && $(MAKE) -f Makefile qmake_all
+sub-MatrixAreas: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile
+sub-MatrixAreas-make_first: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile 
+sub-MatrixAreas-all: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile all
+sub-MatrixAreas-clean: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile clean
+sub-MatrixAreas-distclean: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile distclean
+sub-MatrixAreas-install_subtargets: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile install
+sub-MatrixAreas-uninstall_subtargets: FORCE
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile uninstall
 
 Makefile: ../HomeworkRecursion.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64/qmake.conf /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/shell-unix.conf \
@@ -297,15 +323,15 @@ Makefile: ../HomeworkRecursion.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g
 qmake: FORCE
 	@$(QMAKE) -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ../HomeworkRecursion.pro
 
-qmake_all: sub-ArrayReverse-qmake_all sub-NestedLoops-qmake_all sub-RepetitionComb-qmake_all sub-TowerOfHanoi-qmake_all sub-NoRepetitionComb-qmake_all sub-MatrixPaths-qmake_all FORCE
+qmake_all: sub-ArrayReverse-qmake_all sub-NestedLoops-qmake_all sub-RepetitionComb-qmake_all sub-TowerOfHanoi-qmake_all sub-NoRepetitionComb-qmake_all sub-MatrixPaths-qmake_all sub-MatrixAreas-qmake_all FORCE
 
-make_first: sub-ArrayReverse-make_first sub-NestedLoops-make_first sub-RepetitionComb-make_first sub-TowerOfHanoi-make_first sub-NoRepetitionComb-make_first sub-MatrixPaths-make_first FORCE
-all: sub-ArrayReverse-all sub-NestedLoops-all sub-RepetitionComb-all sub-TowerOfHanoi-all sub-NoRepetitionComb-all sub-MatrixPaths-all FORCE
-clean: sub-ArrayReverse-clean sub-NestedLoops-clean sub-RepetitionComb-clean sub-TowerOfHanoi-clean sub-NoRepetitionComb-clean sub-MatrixPaths-clean FORCE
-distclean: sub-ArrayReverse-distclean sub-NestedLoops-distclean sub-RepetitionComb-distclean sub-TowerOfHanoi-distclean sub-NoRepetitionComb-distclean sub-MatrixPaths-distclean FORCE
+make_first: sub-ArrayReverse-make_first sub-NestedLoops-make_first sub-RepetitionComb-make_first sub-TowerOfHanoi-make_first sub-NoRepetitionComb-make_first sub-MatrixPaths-make_first sub-MatrixAreas-make_first FORCE
+all: sub-ArrayReverse-all sub-NestedLoops-all sub-RepetitionComb-all sub-TowerOfHanoi-all sub-NoRepetitionComb-all sub-MatrixPaths-all sub-MatrixAreas-all FORCE
+clean: sub-ArrayReverse-clean sub-NestedLoops-clean sub-RepetitionComb-clean sub-TowerOfHanoi-clean sub-NoRepetitionComb-clean sub-MatrixPaths-clean sub-MatrixAreas-clean FORCE
+distclean: sub-ArrayReverse-distclean sub-NestedLoops-distclean sub-RepetitionComb-distclean sub-TowerOfHanoi-distclean sub-NoRepetitionComb-distclean sub-MatrixPaths-distclean sub-MatrixAreas-distclean FORCE
 	-$(DEL_FILE) Makefile
-install_subtargets: sub-ArrayReverse-install_subtargets sub-NestedLoops-install_subtargets sub-RepetitionComb-install_subtargets sub-TowerOfHanoi-install_subtargets sub-NoRepetitionComb-install_subtargets sub-MatrixPaths-install_subtargets FORCE
-uninstall_subtargets: sub-ArrayReverse-uninstall_subtargets sub-NestedLoops-uninstall_subtargets sub-RepetitionComb-uninstall_subtargets sub-TowerOfHanoi-uninstall_subtargets sub-NoRepetitionComb-uninstall_subtargets sub-MatrixPaths-uninstall_subtargets FORCE
+install_subtargets: sub-ArrayReverse-install_subtargets sub-NestedLoops-install_subtargets sub-RepetitionComb-install_subtargets sub-TowerOfHanoi-install_subtargets sub-NoRepetitionComb-install_subtargets sub-MatrixPaths-install_subtargets sub-MatrixAreas-install_subtargets FORCE
+uninstall_subtargets: sub-ArrayReverse-uninstall_subtargets sub-NestedLoops-uninstall_subtargets sub-RepetitionComb-uninstall_subtargets sub-TowerOfHanoi-uninstall_subtargets sub-NoRepetitionComb-uninstall_subtargets sub-MatrixPaths-uninstall_subtargets sub-MatrixAreas-uninstall_subtargets FORCE
 
 sub-ArrayReverse-check:
 	@test -d ArrayReverse/ || mkdir -p ArrayReverse/
@@ -325,7 +351,10 @@ sub-NoRepetitionComb-check:
 sub-MatrixPaths-check:
 	@test -d MatrixPaths/ || mkdir -p MatrixPaths/
 	cd MatrixPaths/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixPaths/MatrixPaths.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile check
-check: sub-ArrayReverse-check sub-NestedLoops-check sub-RepetitionComb-check sub-TowerOfHanoi-check sub-NoRepetitionComb-check sub-MatrixPaths-check
+sub-MatrixAreas-check:
+	@test -d MatrixAreas/ || mkdir -p MatrixAreas/
+	cd MatrixAreas/ && ( test -e Makefile || $(QMAKE) /home/akrastev/Qt/softuni-algorithms/HomeworkRecursion/MatrixAreas/MatrixAreas.pro -spec linux-g++-64 CONFIG+=debug CONFIG+=declarative_debug CONFIG+=qml_debug -o Makefile ) && $(MAKE) -f Makefile check
+check: sub-ArrayReverse-check sub-NestedLoops-check sub-RepetitionComb-check sub-TowerOfHanoi-check sub-NoRepetitionComb-check sub-MatrixPaths-check sub-MatrixAreas-check
 install: install_subtargets  FORCE
 
 uninstall:  uninstall_subtargets FORCE
